Narrative added. Layout update.

--- a/src/components/ui/Text/Text.module.css
+++ b/src/components/ui/Text/Text.module.css
@@ -3,6 +3,7 @@
   font-size: 15px;
   line-height: 130%;
   font-weight: 500;
+  margin: 0;
 
   @media screen and (min-width: 720px) {
     font-size: 22px;
