--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,19 @@
 
 html,
 body {
-  padding: 0;
   margin: 0;
-  font-family: var(--core-sans-c);
+}
+
+html {
   scroll-behavior: smooth;
 }
 
 body {
-  background-color: var(--secondary);
   display: grid;
-  grid-template-rows: min-content 1fr min-content;
-  max-width: 100vw;
   min-height: 100vh;
-  overflow: hidden;
+  grid-template-rows: min-content 1fr min-content;
+  background-color: var(--secondary);
+  font-family: var(--core-sans-c);
+  color: var(--black);
+  overflow-x: hidden;
 }
