--- a/src/components/layout/Footer/Footer.module.css
+++ b/src/components/layout/Footer/Footer.module.css
@@ -20,6 +20,7 @@
 
 .email {
   color: var(--white);
+  font-family: var(--core-sans-c);
   font-size: 15px;
   line-height: 130%;
   font-weight: 500;
