--- a/src/components/layout/Badge/Badge.module.css
+++ b/src/components/layout/Badge/Badge.module.css
@@ -6,6 +6,7 @@
   transform: translateY(-50%);
   background-color: var(--primary);
   border-radius: 10px 0 0 10px;
+  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
 }
 
 .link {
