--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -113,6 +113,7 @@
   height: 51px;
   background-color: var(--primary);
   border-radius: 50%;
+  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
 
   @media screen and (min-width: 1024px) {
     display: none;
