--- a/src/components/blocks/Hero/Hero.module.css
+++ b/src/components/blocks/Hero/Hero.module.css
@@ -5,21 +5,13 @@
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
-  /* max-width: 100vw; */
 }
 
 .inner {
-  /* padding: 90px 0 246px; */
   padding-top: 90px;
-
-  /* @media screen and (min-width: 720px) {
-    padding-top: 134px;
-    padding: 134px 0 415px;
-  } */
 
   @media screen and (min-width: 1024px) {
     padding-top: 134px;
-    /* padding: 134px 0 507px; */
   }
 }
 
@@ -32,6 +24,15 @@
   @media screen and (min-width: 1024px) {
     display: none;
   }
+}
+
+.motionDiv {
+  display: flex;
+}
+
+.image {
+  width: 100%;
+  height: auto;
 }
 
 .cloudLT {
