--- a/src/components/layout/Badge/Badge.module.css
+++ b/src/components/layout/Badge/Badge.module.css
@@ -4,6 +4,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
+  transition: all 0.3s ease-in-out;
   background-color: var(--primary);
   border-radius: 10px 0 0 10px;
   filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
