Layout update; Resize fixes

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -18,3 +18,9 @@ body {
 .swiper-wrapper {
   width: 10px !important;
 }
+
+@supports (font: -apple-system-body) and (-webkit-appearance: none) {
+  img[loading='lazy'] {
+    clip-path: inset(0.6px);
+  }
+}
